attempt at nav overflow fix

--- a/assets/main.css
+++ b/assets/main.css
@@ -80,6 +80,14 @@ selfrow Fonts
 @media (max-width: 769.9px) {
  .home-hero {
   font-size: 17vw !important;
+  }
+  html,body
+  {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
   } 
 }
 
